# ArcDetection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  batch_feature_extraction.py  package.xml  process_notebook.ipynb
analysis/: CMakeLists.txt  batch_feature_extraction.cpp  batch_feature_extraction.py  batch_feature_extraction_double_window.py  batch_feature_extraction_single_window.py  fft_calculator.cpp  model_training.py  process_notebook.ipynb  requirements.txt
analysis/preprocessed_data/: processed_data_1.csv
interfaces/msg/: FFT.msg  FFTBuffer.msg  IndexedSeries.msg  MLFeatures.msg  MLResult.msg  TimeSeries.msg
launch/: arc_sim.launch.py
params/: default.yaml
preprocessed_data/: processed_data.csv
ros_sources/adc/: adc_model.cpp  adc_model.h  main.cpp  model_adc.cpp  model_adc.h
ros_sources/common/: common_definitions.h
ros_sources/detection/: detection_model.cpp  detection_model.h  detection_types.h  main.cpp  model_detection.cpp  model_detection.h
ros_sources/dma/: dma_model.cpp  dma_model.h  main.cpp
src/adc/: model_adc.cpp  model_adc.h
src/detection/: main.cpp  model_detection.cpp  model_detection.h
